<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.Favorites">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight">

            <TextView
                android:id="@+id/txt_watchlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/your_watchlist"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:textSize="@dimen/_18ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/watchlistRecyclerview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:layout_marginTop="@dimen/_4sdp"
                android:padding="@dimen/_4sdp"
                android:layout_below="@+id/txt_watchlist"
                android:layout_alignParentBottom="true"
             />

            <ImageView
                android:id="@+id/img_noItems"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_250sdp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_no_items"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_placeHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_noItems"
                android:layout_centerHorizontal="true"
                android:text="@string/no_items_in_your_watchlist"
                android:textColor="#414243"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/img_deleteAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete_all"
            android:backgroundTint="@color/colorAccent"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>