<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/inputSearch"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_search_edt"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:maxLines="2"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:textColor="@color/colorTextIcons"
                android:textColorHint="@color/colorTextSecondary"
                android:textSize="@dimen/_13ssp" />

            <ImageView
                android:id="@+id/imageSearch"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_search"
                app:tint="@color/colorTextIcons" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/MoviesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:padding="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

        <TextView
            android:id="@+id/notFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/search_for_movies_celebrities"
            android:textColor="#4BCACA"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="@dimen/_18sdp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>