<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movieItemContainer"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_230sdp"
        android:layout_margin="@dimen/_4sdp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/img_homeItem"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_180sdp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius_top_left="@dimen/_8sdp"
            app:riv_corner_radius_top_right="@dimen/_8sdp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailsLayout"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_homeItem">

            <TextView
                android:id="@+id/txt_movieTitle"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="3"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/fast_and_furious_9"
                android:textColor="#fff"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_movieVotes"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_favorite"
                android:layout_marginStart="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_movieTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorAccent" />

            <TextView
                android:id="@+id/txt_movieVotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/_1_5k"
                android:textColor="#fff"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
               app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_movieVotes" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>