<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        tools:context=".fragments.ActorDetails">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/castImage"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_170sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_corner_radius="@dimen/_6sdp" />

                <TextView
                    android:id="@+id/txt_ActorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:textColor="@color/colorTextOther"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toEndOf="@+id/castImage"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_knownFor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/known_for"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@+id/castImage"
                    app:layout_constraintTop_toBottomOf="@+id/txt_ActorName" />

                <TextView
                    android:id="@+id/txt_knownForProfession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toEndOf="@+id/castImage"
                    app:layout_constraintTop_toBottomOf="@+id/txt_knownFor" />


                <TextView
                    android:id="@+id/txt_dateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@+id/castImage"
                    app:layout_constraintTop_toBottomOf="@+id/txt_knownForProfession" />

                <TextView
                    android:id="@+id/dateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="@font/ubuntu_medium"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toEndOf="@+id/castImage"
                    app:layout_constraintTop_toBottomOf="@+id/txt_dateOfBirth" />

                <TextView
                    android:id="@+id/txt_birthPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/birthplace"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@+id/castImage"
                    app:layout_constraintTop_toBottomOf="@+id/dateOfBirth" />

                <TextView
                    android:id="@+id/birthPlace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/ubuntu_medium"
                    android:maxLines="2"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/castImage"
                    app:layout_constraintTop_toBottomOf="@+id/txt_birthPlace" />

                <TextView
                    android:id="@+id/txt_biography"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/biography"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/castImage" />

                <TextView
                    android:id="@+id/Biography"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:textColor="@color/colorGreen"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_biography" />

                <TextView
                    android:id="@+id/txt_knownForMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/Known_for"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Biography" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/knownForRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_knownForMovies" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>